Fix landing page display on mobile devices by providing 2 different customer feedback screenshot sizes

--- a/landing-page/css/styles.css
+++ b/landing-page/css/styles.css
@@ -11516,3 +11516,7 @@ html {
 .row.equal-column-height .col-md-6 .card-body {
     height: 150px;
 }
+
+img.customer-feedback {
+    min-width: 325px;
+}
